--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 
 html {
   scroll-behavior: smooth;
@@ -317,4 +318,32 @@ img {
 
 /* color theme */
 
+body .display-3{
+  color: #b78fd6 !important;
+  font-weight: 400;
+}
 
+.subhead {
+  color: #5eb090;
+  text-transform: uppercase;
+}
+
+nav {
+  background-color: #eae164 !important;
+}
+
+.nav-link {
+  color: #3c6ca8 !important; 
+  font-size: 1.4rem;
+}
+
+.bio-text {
+  color: #3c6ca8;
+}
+
+.bio-name {
+  color: #b78fd6;
+  font-weight: bolder;
+  text-transform: uppercase;
+  
+}
