--- a/style.css
+++ b/style.css
@@ -171,7 +171,6 @@ img {
   opacity: 1;
 }
 .fixed-top {
-    background: #000;
     z-index: 100;
 }
 .display-3 {
@@ -329,7 +328,6 @@ body .display-3{
 }
 
 nav {
-  background-color: #eae164 !important;
 }
 
 .nav-link {
@@ -346,4 +344,15 @@ nav {
   font-weight: bolder;
   text-transform: uppercase;
   
+}
+
+/* Transition of Navbar */
+
+#topBar {
+  transition: background-color 0.5s ease;
+}
+
+#topBar.scrolled {
+  background-color: #eae164 !important;
+
 }
