--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;400;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
 
 
 
@@ -23,20 +23,10 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: Work Sans, sans-serif;
+  /* font-family: Work Sans, sans-serif; */
+  font-family: "Hanken Grotesk", sans-serif;
 }
-#top {
-  /*height: 1000px;*/
-}
-#work {
- /* height: 600px;*/
-}
-#about {
-  /*height: 1000px;*/
-}
-#contact {
-  /*height: 1000px;*/
-}
+
 footer {
   height: 300px;
 }
@@ -149,11 +139,14 @@ img {
 .nav-masthead .active {
     color: #d03acd;
 }
-.subhead{
+
+/* .subhead{
   font-weight: 600;
   margin-top: 150px;
   color: #90278E;
-}
+} */
+
+
 .container {
   z-index: 0; 
 }
@@ -472,14 +465,40 @@ nav {
   100% { transform: scale(1); }
 }
 
+/* Header */
+h1 {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60vh; /* Adjust as needed */
+}
+
+
+
+.js-t-line {
+  font-size: 7.5rem;
+  font-weight: 400;
+  line-height: 50%;
+}
+
+.js-t-line:nth-child(1) {
+  margin-left: 100px;
+}
+
+.js-t-line:nth-child(2) {
+  margin-left: -200px;
+}
+
+.js-t-line:nth-child(3) {
+  margin-left: 200px;
+}
+
+.js-t-line:nth-child(4) {
+  margin-left: -140px;
+}
 
 /* hero area */
 
-.hero-video {
-  position: relative;
-  height: calc(100vh - 60px); /* Adjust the height to be full viewport minus the navbar height */
-  overflow: hidden;
-}
 
 .hero-video::after {
   content: "";
@@ -488,33 +507,30 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* Adjust the last value to change the opacity */
+  background: rgba(0, 0, 0, 0.4); /* Adjust the last value to change the opacity */
   z-index: 1;
+}
+
+
+.hero-video {
+  position: relative;
+  width: 65%; /* Adjust this to change the width of the video */
+  height: calc(50vh - 60px); /* Adjust the height to be full viewport minus the navbar height */
+  overflow: hidden;
 }
 
 .hero-video video {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 70%; /* Adjust this to change the vertical focus point of the video */
+  left: 70%; /* Adjust this to change the horizontal focus point of the video */
+  transform: translate(-50%, -50%);
   min-width: 100%;
   min-height: 100%;
   width: auto;
   height: auto;
-  z-index: 0;
-  transform: translate(-50%, -50%);
+  overflow: hidden;
 }
 
-.hero-text {
-  text-align: center;
-  position: relative;
-  z-index: 2;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: var(--primary-color) !important;
-}
 
-#myVideo {
-  opacity: 0.7;
-}
+
 
