--- a/style.css
+++ b/style.css
@@ -394,7 +394,7 @@ body .display-3{
 
 
 /* Header */
-h1 {
+h1.t-line {
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -469,5 +469,35 @@ h1 {
   overflow: hidden;
 }
 
+/* about me */
 
+.about-me {
+  flex-direction: column;
+  align-items: center;
+}
+
+#read-more {
+  display: block;
+  margin-top: 20px;
+}
+
+.bio-photo-container {
+  width: 100%; /* Adjust this to change the width of the container */
+  padding-bottom: 100%; /* This makes the height equal to the width */
+  position: relative;
+}
+
+.bio-photo {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 0; 
+}
+
+
+.top-line {
+  text-align: center;
+  font-weight: 700;
+}
 
