--- a/style.css
+++ b/style.css
@@ -583,11 +583,12 @@ body .display-3{
   }
 }
 
-
+/* headline */
 
 .line {
   display: flex;
   justify-content: space-between;
+  line-height: 5rem;
 }
 
 .word {
@@ -624,7 +625,7 @@ a {
 }
 
 .fancy:hover > .outer > .inner > .letter {
-  background: linear-gradient(
+  /* background: linear-gradient(
   to right,
   red,
   orange,
@@ -633,8 +634,9 @@ a {
   blue,
   indigo,
   violet
-);
-  background-size: 1000%;
+); */
+background-color: var(--white);
+background-size: 1000%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation: background-pan 150s linear infinite;
